# home_bookkeeping

./: .gitignore  .test.env  README.md  docker-compose-local.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
app/: __init__.py  base_schema.py  router.py  settings.py
app/accounts/: __init__.py  handlers.py  models.py  schemas.py
app/accounts/services/: __init__.py  accounts.py  exc.py
app/operations/: __init__.py  models.py
app/orm/: __init__.py  base_model.py  db_helper.py  manager.py  session_manager.py  sql_enums.py
app/tests/: conftest.py
app/tests/test_users/: conftest.py  test_user_crud_exc.py  test_users.py  test_users_crud.py  test_users_crud_exc.py  test_users_exc.py
app/users/: __init__.py  handlers.py  models.py  schemas.py
app/users/services/: __init__.py  crud.py  exc.py  groups.py  jwt.py  users.py  utils.py
migrations/: env.py
migrations/versions/: 3079d98fd2f2_create_models_account_income_expense_.py  a117b181306b_modified_models_user_group_and_created_.py  ab71a15e9619_initial_revision.py
